Fix pre wrap in call

--- a/editor/animation/init.css
+++ b/editor/animation/init.css
@@ -49,7 +49,7 @@
     text-align: center;
     letter-spacing: 0.7px;
     word-break: break-word;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .animation-content .error{
